* pheno:   fixed resetting *war modes on map changes

1.0.0
* cs:      added some fixes from gaoesa of silEnT team
* harald:  bans are now based on IP, guid and MAC address
* harald:  added g_spoofOptions for MAC spoofing
* harald:  banning 1 person without a guid doesn't cause all players without
           guid to be banned
* harald:  kick players with etpub client version mismatch when g_clientVersion
           is defined in server.cfg
* cs:      Lua API: added gaoesa's fix for sess.spectatorClient
* harald:  added g_panzerLevelUp for gaining 'Improved Projectile Resources'
           upgrade for panzers (etpro b_panzerLevelUp)
* pheno:   made XPSave and Shrubbot possible on PunkBuster disabled servers
* pheno:   Lua API: et_ClientBegin() is now ETPro compatible (called only once per map)
* pheno:   moved standard output of GeoIP and Lua API to console
* harald:  g_friendlyFireOpts 8 allows for FF on vehichles (ET_MOVER)
* pheno:   added g_unlockWeapons cvar for unlocking weapons per class (see docs)
* pheno:   removed g_mode cvar and added flags 2048 (instant spawn), 4096 (adrenaline) and
           8192 (no damage) to g_misc cvar (see docs)
* pheno:   added server gameplay cvar change announcement
* pheno:   fixed a bug where gameplay cvar changes wasn't announced
* pheno:   added client side hitsound handling (NOTE: only available with installed
           etpub client > 20100628)
* pheno:   fixed a bug with latest etpub client installed where last hitsound is repeated after
           changing hitsound options server and/or client side
* pheno:   Lua API: added RO access to sess.aWeaponStats (reworked code from fart11eleven)
           http://www.etpub.org/viewtopic.php?f=8&t=69
* pheno:   Lua API: fixed trajectory get and set functions to have the correct data types
* pheno:   fixed memory leaking in settings config handling and in Lua API (thx gaoesa)
* pheno:   Lua API: added RO access to gentity field pers.etpubc